# ros_protobuf_plugin

./: CMakeLists.txt  README.md  devel  pb_talker.cpp
build_for_self/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_for_self/atomic_configure/: .rosinstall  local_setup.sh
build_for_self/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  setup_cached.sh
build_for_self/catkin_generated/installspace/: myprojectConfig.cmake
build_for_self/devel/: .catkin  setup.sh
build_for_self/devel/lib/myproject/: listener  pb_listener  pb_talker  talker
build_for_self/devel/lib/pkgconfig/: myproject.pc
build_for_self/devel/share/myproject/cmake/: myprojectConfig.cmake
build_for_self/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_for_self/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_for_self/gtest/googletest/: CTestTestfile.cmake  Makefile
build_for_self/message_serialization/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_for_self/message_traits/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_for_self/sample_protos/: CTestTestfile.cmake  Makefile  cmake_install.cmake  publish_info.pb.cc  publish_info.pb.h
example/plugin_use_example/test_ros_protobuf/: CMakeLists.txt  package.xml
example/plugin_use_example/test_ros_protobuf/sample_protos/: imu_data.proto
example/plugin_use_example/test_ros_protobuf/src/: pb_talker.cpp
example_for_app/plugin_use_example/test_ros_protobuf/: CMakeLists.txt
example_src/: pb_listener.cpp
message_serialization/include/ros/: serialization_protobuffer.h
test_ros_protobuf/: CMakeLists.txt  pb_listener.cpp
test_ros_protobuf/proto_data/: CMakeLists.txt
